task3/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-k8s-app
spec:
  selector:
    app: my-k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
